Fix: `ColonyMeta` edit colony icon alignment

--- a/src/modules/dashboard/components/ColonyHome/ColonyMeta/ColonyMeta.css
+++ b/src/modules/dashboard/components/ColonyHome/ColonyMeta/ColonyMeta.css
@@ -30,7 +30,7 @@
    * @NOTE Negative Margins
    * Added in order to perfectly align the settings icon
    */
-  margin: -2px 0 0 6px;
+  margin: -5px 0 0 6px;
   padding: 0;
   vertical-align: -webkit-baseline-middle;
 }
